Version 5.8.0
---------------
Added new map system using standard txt files from the game
Added titanium buffs code
Changed AutoBot can now open on its own without EQTrainer
Changed the map system is now built in to EQTrainer
Changed buffs code to properly refresh
Moved InjectDLL detection to memory instead of EQTrainer
Fixed player money in Titanium


Version 5.7.8
---------------
Added CheckPCNearby give up after 10 minutes and continue
Added (again) player xyz check after teleporting
Added autoBot form password setting to relog if zone desync
Added LOTS of new titanium scripts
Fixed player money if below 0
Fixed (maybe) HP MP XP progress bars
Fixed checkPCNearby type and ignore names


Version 5.7.7
---------------
Fixed proper process handle closing and opening
Moved setFocus to memory.dll
Added zoneCheck function 1 second buffer
Added check to see if dll already injected


Version 5.7.6
---------------
Fixed XP progressbar now shows at 0%
Fixed WinXP proper directory reset when zone changes
Fixed game crash if you try to teleport while zoning
Added settings form and button
Added old warp method settings option
Added no popup when coordinates blank settings option
Changed bank money to include player money and total
Changed progressbars to overlay current/max or percent information (hp,mp,xp)
Changed form size to fit 1024 x 768 monitors


Version 5.7.5
---------------
Fixed toolbar focus crashing
Fixed map not updating constantly
Fixed toolbar spawn list crashing
Changed inject only functions when build ver. or game ID changes
Added new autobot function setfocus to focus on eqgame window
Added timer to autobot form UI


Version 5.7.4
---------------
Added Health and mana progress bars
Added toolbar UI and button


Version 5.7.3
---------------
Fixed map system
Removed "areas of interest" and "fast travel" folders and put zone folders in telescripts folder
Changed telescripts file names and folders to be more clean and correct