@@ -26,7 +26,7 @@
     <CheatEntry>
       <ID>33</ID>
       <Description>"Player Name"</Description>
-      <LastState Activated="0" RealAddress="15794408"/>
+      <LastState Activated="0" RealAddress="157FEA50"/>
       <Color>80000008</Color>
       <VariableType>String</VariableType>
       <Length>20</Length>
@@ -40,7 +40,7 @@
         <CheatEntry>
           <ID>13</ID>
           <Description>"Runspeed"</Description>
-          <LastState Value="0.6999999881" Activated="0" RealAddress="063C4740"/>
+          <LastState Value="0.6999999881" Activated="0" RealAddress="12030030"/>
           <Color>80000008</Color>
           <VariableType>Float</VariableType>
           <Address>"eqgame.exe"+00505CE4</Address>
@@ -51,7 +51,7 @@
         <CheatEntry>
           <ID>14</ID>
           <Description>"Player X Axis"</Description>
-          <LastState Value="3391.796875" Activated="0" RealAddress="063C45C0"/>
+          <LastState Value="3352.868652" Activated="0" RealAddress="1202FEB0"/>
           <Color>80000008</Color>
           <VariableType>Float</VariableType>
           <Address>"eqgame.exe"+00505CE4</Address>
@@ -62,7 +62,7 @@
         <CheatEntry>
           <ID>15</ID>
           <Description>"Player Y Axis"</Description>
-          <LastState Value="573.3162231" Activated="0" RealAddress="063C45C4"/>
+          <LastState Value="577.9581909" Activated="0" RealAddress="1202FEB4"/>
           <Color>80000008</Color>
           <VariableType>Float</VariableType>
           <Address>"eqgame.exe"+00505CE4</Address>
@@ -73,7 +73,7 @@
         <CheatEntry>
           <ID>16</ID>
           <Description>"Player Z Axis"</Description>
-          <LastState Value="-40.24481583" Activated="0" RealAddress="063C4548"/>
+          <LastState Value="-50.21200562" Activated="0" RealAddress="1202FE38"/>
           <Color>80000008</Color>
           <VariableType>Float</VariableType>
           <Address>"eqgame.exe"+00505CE4</Address>
@@ -84,7 +84,7 @@
         <CheatEntry>
           <ID>34</ID>
           <Description>"Experience"</Description>
-          <LastState Value="163" Activated="0" RealAddress="15789A58"/>
+          <LastState Value="163" Activated="0" RealAddress="157F40A0"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -95,7 +95,7 @@
         <CheatEntry>
           <ID>35</ID>
           <Description>"Copper (bank)"</Description>
-          <LastState Value="0" Activated="0" RealAddress="15794514"/>
+          <LastState Value="0" Activated="0" RealAddress="157FEB5C"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -106,7 +106,7 @@
         <CheatEntry>
           <ID>36</ID>
           <Description>"Silver (bank)"</Description>
-          <LastState Value="0" Activated="0" RealAddress="15794510"/>
+          <LastState Value="0" Activated="0" RealAddress="157FEB58"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -117,7 +117,7 @@
         <CheatEntry>
           <ID>37</ID>
           <Description>"Gold (bank)"</Description>
-          <LastState Value="0" Activated="0" RealAddress="1579450C"/>
+          <LastState Value="0" Activated="0" RealAddress="157FEB54"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -128,7 +128,7 @@
         <CheatEntry>
           <ID>38</ID>
           <Description>"Platinum (bank)"</Description>
-          <LastState Value="0" Activated="0" RealAddress="15794508"/>
+          <LastState Value="0" Activated="0" RealAddress="157FEB50"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -139,7 +139,7 @@
         <CheatEntry>
           <ID>86</ID>
           <Description>"Copper (player)"</Description>
-          <LastState Value="233" Activated="0" RealAddress="13801228"/>
+          <LastState Value="16" Activated="0" RealAddress="15828018"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -152,7 +152,7 @@
         <CheatEntry>
           <ID>122</ID>
           <Description>"Silver (player)"</Description>
-          <LastState Value="168" Activated="0" RealAddress="13801224"/>
+          <LastState Value="156" Activated="0" RealAddress="15828014"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -165,7 +165,7 @@
         <CheatEntry>
           <ID>123</ID>
           <Description>"Gold (player)"</Description>
-          <LastState Value="38" Activated="0" RealAddress="13801220"/>
+          <LastState Value="38" Activated="0" RealAddress="15828010"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -178,7 +178,7 @@
         <CheatEntry>
           <ID>124</ID>
           <Description>"Platinum (player)"</Description>
-          <LastState Value="817" Activated="0" RealAddress="1380121C"/>
+          <LastState Value="817" Activated="0" RealAddress="1582800C"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -191,7 +191,7 @@
         <CheatEntry>
           <ID>125</ID>
           <Description>"Current Mana"</Description>
-          <LastState Value="799" Activated="0" RealAddress="138011F0"/>
+          <LastState Value="771" Activated="0" RealAddress="15827FE0"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -215,7 +215,7 @@
         <CheatEntry>
           <ID>126</ID>
           <Description>"Level"</Description>
-          <LastState Value="30" Activated="0" RealAddress="138011EC"/>
+          <LastState Value="30" Activated="0" RealAddress="15827FDC"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -228,7 +228,7 @@
         <CheatEntry>
           <ID>128</ID>
           <Description>"Inventory"</Description>
-          <LastState Value="0 0 0 0 0 0 0 0 136 238 105 21 176 42 223 21 0 0 0 0 128 43 223 21 80 44 223 21 32 45 223 21 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0" Activated="0" RealAddress="13800058"/>
+          <LastState Value="0 0 0 0 0 0 0 0 152 2 140 21 232 9 140 21 0 0 0 0 32 196 245 4 240 196 245 4 192 197 245 4 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0" Activated="0" RealAddress="15826E48"/>
           <Color>80000008</Color>
           <VariableType>Array of byte</VariableType>
           <ByteLength>50</ByteLength>
@@ -242,7 +242,7 @@
         <CheatEntry>
           <ID>127</ID>
           <Description>"Bound Zone"</Description>
-          <LastState Value="78" Activated="0" RealAddress="138012D4"/>
+          <LastState Value="78" Activated="0" RealAddress="158280C4"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>0x905D00</Address>
@@ -255,7 +255,7 @@
         <CheatEntry>
           <ID>45</ID>
           <Description>"Player Heading"</Description>
-          <LastState Value="511.4555664" Activated="0" RealAddress="063C455C"/>
+          <LastState Value="334.2539062" Activated="0" RealAddress="1202FE4C"/>
           <Color>80000008</Color>
           <VariableType>Float</VariableType>
           <Address>"eqgame.exe"+00505CE4</Address>
@@ -266,7 +266,7 @@
         <CheatEntry>
           <ID>46</ID>
           <Description>"Player HP Max"</Description>
-          <LastState Value="66" Activated="0" RealAddress="063C4794"/>
+          <LastState Value="66" Activated="0" RealAddress="12030084"/>
           <Color>80000008</Color>
           <VariableType>Byte</VariableType>
           <Address>"eqgame.exe"+00505CE4</Address>
@@ -277,7 +277,7 @@
         <CheatEntry>
           <ID>51</ID>
           <Description>"Player HP Current"</Description>
-          <LastState Value="66" Activated="0" RealAddress="063C4784"/>
+          <LastState Value="66" Activated="0" RealAddress="12030074"/>
           <Color>80000008</Color>
           <VariableType>Byte</VariableType>
           <Address>"eqgame.exe"+00505CE4</Address>
@@ -288,7 +288,7 @@
         <CheatEntry>
           <ID>50</ID>
           <Description>"Race"</Description>
-          <LastState Value="4" Activated="0" RealAddress="063C4770"/>
+          <LastState Value="4" Activated="0" RealAddress="12030060"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>"eqgame.exe"+00505CE4</Address>
@@ -299,7 +299,7 @@
         <CheatEntry>
           <ID>49</ID>
           <Description>"Height"</Description>
-          <LastState Value="5" Activated="0" RealAddress="063C474C"/>
+          <LastState Value="5" Activated="0" RealAddress="1203003C"/>
           <Color>80000008</Color>
           <VariableType>Float</VariableType>
           <Address>"eqgame.exe"+00505CE4</Address>
@@ -312,7 +312,7 @@
     <CheatEntry>
       <ID>42</ID>
       <Description>"Target Name"</Description>
-      <LastState Activated="0" RealAddress="063C4630"/>
+      <LastState Activated="0" RealAddress="1202FF20"/>
       <Color>80000008</Color>
       <VariableType>String</VariableType>
       <Length>30</Length>
@@ -326,7 +326,7 @@
         <CheatEntry>
           <ID>41</ID>
           <Description>"Target DisplayedName"</Description>
-          <LastState Activated="0" RealAddress="063C4670"/>
+          <LastState Activated="0" RealAddress="1202FF60"/>
           <Color>80000008</Color>
           <VariableType>String</VariableType>
           <Length>30</Length>
@@ -340,7 +340,7 @@
         <CheatEntry>
           <ID>19</ID>
           <Description>"Target Y"</Description>
-          <LastState Value="573.3162231" Activated="0" RealAddress="063C4544"/>
+          <LastState Value="577.9581909" Activated="0" RealAddress="1202FE34"/>
           <Color>80000008</Color>
           <VariableType>Float</VariableType>
           <Address>905d04</Address>
@@ -351,7 +351,7 @@
         <CheatEntry>
           <ID>18</ID>
           <Description>"Target X"</Description>
-          <LastState Value="3391.796875" Activated="0" RealAddress="063C4540"/>
+          <LastState Value="3352.868652" Activated="0" RealAddress="1202FE30"/>
           <Color>80000008</Color>
           <VariableType>Float</VariableType>
           <Address>905d04</Address>
@@ -362,7 +362,7 @@
         <CheatEntry>
           <ID>20</ID>
           <Description>"Target Z"</Description>
-          <LastState Value="-40.24481583" Activated="0" RealAddress="063C4548"/>
+          <LastState Value="-50.21200562" Activated="0" RealAddress="1202FE38"/>
           <Color>80000008</Color>
           <VariableType>Float</VariableType>
           <Address>905d04</Address>
@@ -373,7 +373,7 @@
         <CheatEntry>
           <ID>40</ID>
           <Description>"Target Heading"</Description>
-          <LastState Value="511.4555664" Activated="0" RealAddress="063C455C"/>
+          <LastState Value="334.2539062" Activated="0" RealAddress="1202FE4C"/>
           <Color>80000008</Color>
           <VariableType>Float</VariableType>
           <Address>905d04</Address>
@@ -395,7 +395,7 @@
         <CheatEntry>
           <ID>69</ID>
           <Description>"Target Type"</Description>
-          <LastState Value="0" Activated="0" RealAddress="063C4754"/>
+          <LastState Value="0" Activated="0" RealAddress="12030044"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>905d04</Address>
@@ -406,7 +406,7 @@
         <CheatEntry>
           <ID>43</ID>
           <Description>"Target Level"</Description>
-          <LastState Value="30" Activated="0" RealAddress="063C475C"/>
+          <LastState Value="30" Activated="0" RealAddress="1203004C"/>
           <Color>80000008</Color>
           <VariableType>Byte</VariableType>
           <Address>905d04</Address>
@@ -417,7 +417,7 @@
         <CheatEntry>
           <ID>44</ID>
           <Description>"Target Class"</Description>
-          <LastState Value="6" Activated="0" RealAddress="063C4762"/>
+          <LastState Value="6" Activated="0" RealAddress="12030052"/>
           <Color>80000008</Color>
           <VariableType>Byte</VariableType>
           <Address>905d04</Address>
@@ -428,12 +428,23 @@
         <CheatEntry>
           <ID>52</ID>
           <Description>"Target HP Current"</Description>
-          <LastState Value="578" Activated="0" RealAddress="063C4784"/>
+          <LastState Value="578" Activated="0" RealAddress="12030074"/>
           <Color>80000008</Color>
           <VariableType>4 Bytes</VariableType>
           <Address>905d04</Address>
           <Offsets>
             <Offset>274</Offset>
+          </Offsets>
+        </CheatEntry>
+        <CheatEntry>
+          <ID>133</ID>
+          <Description>"Target Is a Boat"</Description>
+          <LastState Value="0" Activated="0" RealAddress="1202FFB6"/>
+          <Color>80000008</Color>
+          <VariableType>Byte</VariableType>
+          <Address>905d04</Address>
+          <Offsets>
+            <Offset>1B6</Offset>
           </Offsets>
         </CheatEntry>
       </CheatEntries>
@@ -505,7 +516,7 @@
     <CheatEntry>
       <ID>67</ID>
       <Description>"mouseX"</Description>
-      <LastState Value="261" Activated="0" RealAddress="00988C88"/>
+      <LastState Value="310" Activated="0" RealAddress="00988C88"/>
       <Color>80000008</Color>
       <VariableType>4 Bytes</VariableType>
       <Address>0x988C88</Address>
@@ -521,7 +532,7 @@
     <CheatEntry>
       <ID>72</ID>
       <Description>"Cursor Item"</Description>
-      <LastState Value="0" Activated="0" RealAddress="12FE7AE0"/>
+      <LastState Value="0" Activated="0" RealAddress="05E3A380"/>
       <Color>80000008</Color>
       <VariableType>Byte</VariableType>
       <Address>"eqgame.exe"+00505D24</Address>
@@ -532,7 +543,7 @@
     <CheatEntry>
       <ID>73</ID>
       <Description>"Give Window"</Description>
-      <LastState Value="0" Activated="0" RealAddress="15D64754"/>
+      <LastState Value="0" Activated="0" RealAddress="270535E4"/>
       <Color>80000008</Color>
       <VariableType>Byte</VariableType>
       <Address>"eqgame.exe"+00450C60</Address>
@@ -543,7 +554,7 @@
     <CheatEntry>
       <ID>129</ID>
       <Description>"buff 1"</Description>
-      <LastState Value="4294967295" Activated="0" RealAddress="138000EC"/>
+      <LastState Value="4294967295" Activated="0" RealAddress="15826EDC"/>
       <Color>80000008</Color>
       <VariableType>4 Bytes</VariableType>
       <Address>0x905D00</Address>
@@ -556,7 +567,7 @@
     <CheatEntry>
       <ID>131</ID>
       <Description>"buff 1 Timer"</Description>
-      <LastState Value="16777215" Activated="0" RealAddress="138000ED"/>
+      <LastState Value="16777215" Activated="0" RealAddress="15826EDD"/>
       <Color>80000008</Color>
       <VariableType>4 Bytes</VariableType>
       <Address>0x905D00</Address>
@@ -569,7 +580,7 @@
     <CheatEntry>
       <ID>130</ID>
       <Description>"buff 2"</Description>
-      <LastState Value="4294967295" Activated="0" RealAddress="13800100"/>
+      <LastState Value="516" Activated="0" RealAddress="15826EF0"/>
       <Color>80000008</Color>
       <VariableType>4 Bytes</VariableType>
       <Address>0x905D00</Address>
@@ -582,7 +593,7 @@
     <CheatEntry>
       <ID>132</ID>
       <Description>"buff 2 timer"</Description>
-      <LastState Value="16777215" Activated="0" RealAddress="13800101"/>
+      <LastState Value="788529154" Activated="0" RealAddress="15826EF1"/>
       <Color>80000008</Color>
       <VariableType>4 Bytes</VariableType>
       <Address>0x905D00</Address>
